@@ -7,6 +7,7 @@ The Pinup Meets Grunge Copyright can be found at the end of this file.
 * General Code reformatting to better meet WordPress Coding Standards
 * Added support for WordPress 4.1 `add_theme_support( 'title-tag' )`
 * Added `PMG_HOME_URL` CONSTANT pointing to BuyNowShop.com
+* Removed `wp_list_bookmarks` from the default sidebar
 
 = CSS =
 * Minor corrections in the stylesheet
